# cmake-examples

./: .gitignore
01-basic/A-hello-cmake/: CMakeLists.txt  main.cpp
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/B-hello-headers/include/: Hello.h
01-basic/B-hello-headers/src/: Hello.cpp  main.cpp
01-basic/C-static-library/: CMakeLists.txt
01-basic/C-static-library/src/: Hello.cpp  main.cpp
01-basic/D-shared-library/: CMakeLists.txt
01-basic/D-shared-library/src/: Hello.cpp  main.cpp
01-basic/E-installing/: CMakeLists.txt
01-basic/F-build-type/: CMakeLists.txt
01-basic/G-compile-flags/: CMakeLists.txt
01-basic/H-third-party-library/: CMakeLists.txt  main.cpp
01-basic/L-cpp-standard/: CMakeLists.txt  main.cpp
02-sub-projects/: CMakeLists.txt
02-sub-projects/subbinary/: CMakeLists.txt  main.cpp
02-sub-projects/sublibrary1/: CMakeLists.txt
02-sub-projects/sublibrary1/include/sublib1/: sublib1.h
02-sub-projects/sublibrary1/src/: sublib1.cpp
02-sub-projects/sublibrary2/: CMakeLists.txt
02-sub-projects/sublibrary2/include/sublib2/: sublib2.h
